--- a/PR-08-MiniProyectoWeb/index.html
+++ b/PR-08-MiniProyectoWeb/index.html
@@ -9,13 +9,19 @@
   <!-- TODO: Cambia el título por algo relacionado con tu temática -->
   <title>DOOM</title>
   <link rel="stylesheet" href="./styles/main.css">
+  <link rel="icon" href="./images/icon.png" type="image/png">
 </head>
 <body>
 
   <!-- CABECERA GLOBAL DEL SITIO -->
   <header class="site-header" id="inicio">
     <!-- TODO: Cambia el título por algo relacionado con tu temática -->
-    <h1>DOOM</h1>
+    <h1>
+     DOOM
+      <img src="./images/gif-00.gif" alt="DoomSlayer" id="banner" >
+     
+      
+      </h1>
 
     <!-- TODO: Menú superior con enlaces a secciones de la misma página -->
     <nav class="main-nav">
